package com.tanh.datsan.constant;

public enum BookingStatus {
    PENDING_PAYMENT,
    CONFIRMED,
    CANCELLED,
    CHECKED_IN,
    NO_SHOW
}
