package com.tanh.datsan.constant;

public enum PaymentStatus {
    PENDING,
    SUCCESS,
    FAILED,
    REFUNDED,
    CANCELLED,
    NO_REFUND
}
