package com.tanh.datsan.constant;

public enum Role {
    CUSTOMER,
    STAFF,
    ADMIN
}
