package com.tanh.datsan.entity;

public enum PaymentMethod {
    VNPAY,
    CASH
}
