@startuml ClassDiagram
skinparam classAttributeIconSize 0

class Account {
  - Long id
  - String username
  - String password
  - String fullName
  - String phone
  - String email
  - Role role
  - boolean isVerified
  - String verificationCode
  - LocalDateTime verificationCodeExpiry
  + login(username: String, pass: String): String
  + register(acc: Account): Account
  + verifyAccount(code: String): boolean
}

enum Role {
  CUSTOMER
  STAFF
  ADMIN
}

Account -> Role

class Pitch {
  - Long id
  - String name
  - String location
  - Double latitude
  - Double longitude
  - String pitchType
  - String status
  + getDetails(): Pitch
  + updateStatus(newStatus: String): void
}

class TimeSlot {
  - Long id
  - Long pitchId
  - LocalTime startTime
  - LocalTime endTime
  - boolean isGoldenHour
  - Double price
  - DayOfWeek dayOfWeek
  + getPriceInfo(): Double
  + updateTimeSlot(startTime: LocalTime, endTime: LocalTime, price: Double): void
}

Pitch "1" *-- "0..*" TimeSlot : has

class Booking {
  - Long id
  - String bookingCode
  - Long accountId
  - Long pitchId
  - LocalDate bookingDate
  - LocalDateTime startTime
  - LocalDateTime endTime
  - Integer durationMinutes
  - Double totalAmount
  - BookingStatus status
  + checkAvailability(pitchId: Long, startTime: LocalDateTime, endTime: LocalDateTime): boolean
  + getBookedTimeRanges(pitchId: Long, date: LocalDate): List<Booking>
  + createBooking(booking: Booking): Booking
  + cancelBooking(bookingId: Long): boolean
  + checkIn(bookingCode: String): void
}

enum BookingStatus {
  PENDING_PAYMENT
  CONFIRMED
  CANCELLED
  CHECKED_IN
  NO_SHOW
}

Booking -> BookingStatus

class Payment {
  - Long id
  - Long bookingId
  - Double amount
  - PaymentMethod method
  - PaymentStatus status
  - String transactionNo
  - String bankCode
  - String orderInfo
  - String vnpResponseCode
  - LocalDateTime paymentTime
  + createPaymentUrl(amount: Double, bookingId: Long): String
  + handleCallback(vnpParams: Map): boolean
  + refund(paymentId: Long): boolean
}

enum PaymentMethod {
  VNPAY
  CASH
}

enum PaymentStatus {
  PENDING
  SUCCESS
  FAILED
}

Payment -> PaymentMethod
Payment -> PaymentStatus

Account "1" -- "0..*" Booking : places / manages
Pitch "1" -- "0..*" Booking : is booked for
Booking "1" *-- "0..1" Payment : includes

@enduml